@@ -617,6 +617,21 @@ margin:1.5em 0;
 padding:1.4em;
 }
 
+input[type=text],input.text {
+width:250px;
+}
+
+textarea {
+width:350px;
+height:250px;
+}
+
+label {
+text-transform:uppercase;
+font-weight:700;
+font-size:.9em;
+}
+
 p,img {
 margin:0 0 1.5em;
 }
